bug fixes on mobile and contact form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,8 @@ img {
 .section {
   position: relative;
   padding: 8.125rem 0;
+  width: 100%;
+  height: 50%
 }
 @media (min-width: 768px) {
   .section {
@@ -365,13 +367,14 @@ img {
 
 .bg-cover {
   background-repeat: no-repeat;
-  background-position: 50%;
+  background-position: center;
   background-size: cover;
 }
 
 .bg-cover,
 .bg-overlay,
 .bg-overlay:before {
+  height: 89%;
   position: absolute;
   top: 0;
   right: 0;
@@ -423,6 +426,9 @@ img {
   color: #fff;
 }
 
+#feature {
+  margin-top: -150px;
+}
 /*----------------------
  ABOUT STYLE
 -----------------------*/
@@ -728,4 +734,34 @@ img {
   font-weight: 700;
   margin: 30px 0px 20px;
   font-size: 22px;
+}
+
+@media screen and (max-width:700px) {
+  section {
+    
+  }
+  
+  .banner-content {
+    padding: 70% 0;
+  }
+  
+  .banner-content h1 {
+    font-size: 35px;
+  }
+  
+  .bg-cover {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  
+  .btn-toggle {
+    position: relative;
+    right: 15vw;
+  }
+
+  .p-sm {
+    font-size: 40px;
+    margin-top: -180px;
+  }
 }
